Prevent wrapping in header

--- a/src/components/site-header/site-header.scss
+++ b/src/components/site-header/site-header.scss
@@ -15,6 +15,7 @@
   padding-right: 1.2rem;
   position: sticky;
   top: 0;
+  white-space: nowrap;
   z-index: 1;
 
   @media (max-width: $breakpoint-md)  {
